--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ide.vscode": "1.1.4",
-    "com.unity.ml-agents": "file:C:/Users/juraj/Documents/_Git/ml-agents/com.unity.ml-agents",
+    "com.unity.ml-agents": "file:D:/Documents/_git/ml-agents/com.unity.ml-agents",
     "com.unity.test-framework": "1.1.11",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
