--- a/Training/trainer_config.yaml
+++ b/Training/trainer_config.yaml
@@ -15,7 +15,7 @@ default:
     num_layers: 2
     time_horizon: 64
     sequence_length: 64
-    summary_freq: 10000
+    summary_freq: 3000
     use_recurrent: false
     vis_encode_type: simple
     reward_signals:
@@ -25,7 +25,6 @@ default:
 
 Ball:
     num_layers: 1
-    hidden_units: 128
     buffer_size: 4096
     batch_size: 2048
     learning_rate: 3.0e-3
@@ -33,7 +32,6 @@ Ball:
     
 Hunter:
     num_layers: 1
-    hidden_units: 128
     buffer_size: 4096
     batch_size: 2048
     learning_rate: 3.0e-3
@@ -41,12 +39,16 @@ Hunter:
     
 Hunted:
     num_layers: 1
-    hidden_units: 128
     buffer_size: 4096
     batch_size: 2048
     learning_rate: 3.0e-3
     max_steps: 3e5
-    
+  
+VolleyballPlayer:
+    max_steps: 10.0e5
+    buffer_size: 2048
+    batch_size: 256
+  
 FoodCollector:
     normalize: false
     beta: 5.0e-3
