--- a/Training/trainer_config.yaml
+++ b/Training/trainer_config.yaml
@@ -48,6 +48,14 @@ VolleyballPlayer:
     max_steps: 10.0e5
     buffer_size: 2048
     batch_size: 256
+    
+TicTacPlayer:
+    time_horizon: 128
+    buffer_size: 1024
+    batch_size: 256
+    summary_freq: 300
+    num_layers: 3
+    max_steps: 3.0e5
   
 FoodCollector:
     normalize: false
