--- a/.gitignore
+++ b/.gitignore
@@ -72,5 +72,6 @@ crashlytics-build.properties
 [Bb]in/
 /UnitySDK.log
 *_timers.json
+*_timers.json.meta
 /[Aa]ssets/[Bb]rainsTmp/*
 /[Aa]ssets/[Bb]rainsTmp.meta
