2DAI Project update for ml-agents ver. 0.15.0

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ crashlytics-build.properties
 /[Aa]ssets/ML-Agents/Timers.meta
 /[Aa]ssets/[Bb]rainsTmp/*
 /[Aa]ssets/[Bb]rainsTmp.meta
+/Assets/ML-Agents.meta
