--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,9 +1,8 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ide.vscode": "1.1.4",
-    "com.unity.ml-agents": "file:../com.unity.ml-agents",
-    "com.unity.test-framework": "1.1.11",
+    "com.unity.ide.visualstudio": "2.0.2",
+    "com.unity.ml-agents": "1.0.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
