--- a/.gitignore
+++ b/.gitignore
@@ -71,8 +71,11 @@ crashlytics-build.properties
 
 [Bb]in/
 /UnitySDK.log
+/[Aa]ssets/ML-Agents/*
+/[Aa]ssets/ML-Agents.meta
 /[Aa]ssets/ML-Agents/Timers/*
 /[Aa]ssets/ML-Agents/Timers.meta
 /[Aa]ssets/[Bb]rainsTmp/*
 /[Aa]ssets/[Bb]rainsTmp.meta
-/Assets/ML-Agents.meta
+/[Tt]raining/[Rr]esults/*
+/[Tt]raining/[Rr]esults.meta
