Update to Unity 2020.3.17f1

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Bb]rainsTmp.meta
 /[Tt]raining/[Rr]esults/*
 /[Tt]raining/[Rr]esults.meta
+/Training/debug.log
