--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ai.navigation": "1.1.3",
-    "com.unity.ide.visualstudio": "2.0.18",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.ml-agents": "2.0.1",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.ai.navigation": "2.0.5",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.ml-agents": "3.0.0",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
