Replacement of obsolete encoding_size parameter.

--- a/Training/trainer_config.yaml
+++ b/Training/trainer_config.yaml
@@ -282,8 +282,9 @@ behaviors:
       curiosity:
         gamma: 0.99
         strength: 0.02
-        encoding_size: 256
         learning_rate: 0.0003
+        network_settings:
+            hidden_units: 256
     keep_checkpoints: 5
     checkpoint_interval: 500000
     max_steps: 10000000
@@ -313,8 +314,9 @@ behaviors:
       curiosity:
         gamma: 0.99
         strength: 0.01
-        encoding_size: 256
         learning_rate: 0.0003
+        network_settings:
+            hidden_units: 256
     keep_checkpoints: 5
     checkpoint_interval: 500000
     max_steps: 10000000
