--- a/Training/trainer_config.yaml
+++ b/Training/trainer_config.yaml
@@ -1,4 +1,30 @@
 behaviors:
+  Fish:
+    trainer_type: ppo
+    hyperparameters:
+      batch_size: 2048
+      buffer_size: 4096
+      learning_rate: 0.003
+      beta: 0.005
+      epsilon: 0.2
+      lambd: 0.95
+      num_epoch: 3
+      learning_rate_schedule: linear
+    network_settings:
+      normalize: false
+      hidden_units: 128
+      num_layers: 1
+      vis_encode_type: simple
+    reward_signals:
+      extrinsic:
+        gamma: 0.99
+        strength: 1.0
+    keep_checkpoints: 5
+    checkpoint_interval: 500000
+    max_steps: 1500000
+    time_horizon: 128
+    summary_freq: 5000
+    threaded: true
   Ball:
     trainer_type: ppo
     hyperparameters:
